--- a/package.json
+++ b/package.json
@@ -1,28 +1,22 @@
 {
-  "name": "BurgerApp",
+  "name": "mvc_design",
   "version": "1.0.0",
-  "description": "a full stack app using node, javascript, express, handlebars, and mysql",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/madeleinecgriffin/BurgerApp.git"
-  },
-  "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/madeleinecgriffin/BurgerApp/issues"
-  },
-  "homepage": "https://github.com/madeleinecgriffin/BurgerApp#readme",
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
-    "express-handlebars": "^3.0.0",
-    "mysql": "^2.15.0",
-    "router": "^1.3.2"
-  }
+    "express-handlebars": "^2.0.1",
+    "mysql": "^2.15.0"
+  },
+  "devDependencies": {
+    "handlebars-helper-css": "^0.1.0"
+  },
+  "keywords": [],
+  "description": ""
 }
